[package]
name = "rust-wasm-image-compress"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
image = { version = "0.25.5", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[profile.release]
opt-level = "s"
panic = 'abort'
debug = false
lto = true
codegen-units = 1
